--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "pnpm install && pnpm install --prefix client && pnpm run build --prefix client"
   },
   "keywords": [],
   "author": "",
